--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-simple-code-editor": "^0.14.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
